--- a/templates/core/student_detail.html
+++ b/templates/core/student_detail.html
@@ -1,3 +1,10 @@
+<style>
+    .field-trusted {}
+    .field-untrusted {color: #aaa;}
+    .field-hidden {color: #eee;}
+</style>
+
+
 <p>
     <a href="{% url 'grade-list' %}">
         Назад к списку классов
@@ -17,7 +24,7 @@
     {% for modification in modifications %}
         <li class="
             {% if modification.status == 'trusted' %}field-trusted{% else %}
-                {% if modification.status == 'untrusted' %}field-trusted{% else %}field-hidden{% endif %}
+                {% if modification.status == 'untrusted' %}field-untrusted{% else %}field-hidden{% endif %}
             {% endif %}">
             {{ modification.field_value }}
             <a href="{% url 'field-vote' pk=modification.pk vote_type='upvoted' %}">+</a>
