--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -59,7 +59,7 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-      <div class="container">
+      <div id="main-content" class="container">
         {% block content %}{% endblock %}
       </div>
 
