--- a/templates/core/student_list.jade
+++ b/templates/core/student_list.jade
@@ -18,6 +18,7 @@ block scripts
                 url = astudent.data 'href'
                 modal.find('.modal-content').load url + ' #main-content > *'
                 modal.modal('show')
+    include core/include_vote
 
 block content
     h1
@@ -25,7 +26,7 @@ block content
         | {{ grade.graduation_year }} года выпуска:
 
     #student-modal.modal.fade(tabindex='-1', role='dialog')
-      .modal-dialog(role='document')
+      .modal-dialog.modal-lg(role='document')
         .modal-content
 
     ul#students
