--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -46,9 +46,9 @@
               <li class="active"><a href="/">Список классов</a></li>
             {% endblock %}
           </ul>
-          <form class="navbar-form navbar-left">
+          <form class="navbar-form navbar-left" action="{% url 'search-list' %}">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="">
+              <input name="query" type="text" class="form-control" value="{{ request.GET.query }}">
             </div>
             <button type="submit" class="btn btn-default">Поиск</button>
           </form>
