--- a/templates/core/student_list.jade
+++ b/templates/core/student_list.jade
@@ -32,11 +32,7 @@ block content
     ul#students
         - for student in object_list
             li
-                a(href="{% url 'student-detail' pk=student.id %}")
-                    | {{ student.name }}
-                | &nbsp;
-                a.student(data-href="{% url 'student-detail' pk=student.id %}")
-                    span.glyphicon.glyphicon-new-window
+                include include/student_item
 
             - empty
                 li Пусто.
