--- a/templates/core/search_list.jade
+++ b/templates/core/search_list.jade
@@ -5,6 +5,9 @@ block nav
         a(href="/") Список классов
     li.active
         a Поиск
+    li
+        a(href="{% url 'student-create' %}")
+            | Добавить выпускника
 
 block content
 
