--- a/templates/core/student_form.jade
+++ b/templates/core/student_form.jade
@@ -1,4 +1,5 @@
 extends 'core/base.html'
+- load bootstrap3
 
 block nav
     li
@@ -9,6 +10,8 @@ block nav
 block content
     h1 Добавить выпускника
     form(action="{% url 'student-create' %}", method="post")
-        {% csrf_token %}
-        {{ form.as_p }}
-        input(type="submit", value="Добавить")
+        - csrf_token
+        - bootstrap_form form
+        - buttons
+            input.btn.btn-default(type="submit") Добавить
+        - endbuttons
