--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -48,7 +48,9 @@
           </ul>
           <form class="navbar-form navbar-left" action="{% url 'search-list' %}">
             <div class="form-group">
-              <input name="query" type="text" class="form-control" value="{{ request.GET.query }}">
+              <input name="query" type="text"
+                     class="suggest-students form-control"
+                     value="{{ request.GET.query }}">
             </div>
             <button type="submit" class="btn btn-default">Поиск</button>
           </form>
@@ -72,6 +74,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js"></script>
     <script>
       function getCookie(name) {
         var cookieValue = null;
@@ -90,6 +93,7 @@
     </script>
 
     {% include "core/login.jade" %}
+    {% include "include/suggest.jade" %}
 
       <div id="main-content" class="container">
         {% block content %}{% endblock %}
