Предложение авторизоваться при попытка проголосовать

--- a/templates/core/include_vote.jade
+++ b/templates/core/include_vote.jade
@@ -1,6 +1,9 @@
 :coffeescript
   $ ->
     click_vote = (e) ->
+      if check_login()
+        return
+
       t = $ e.target
       if not t.hasClass '.btn-vote'
         t = t.parents '.btn-vote'
