--- a/templates/core/grade_list.jade
+++ b/templates/core/grade_list.jade
@@ -1,19 +1,16 @@
 extends 'core/base.html'
 
-block nav
-    {{ block.super }}
-    li
-        a(href="{% url 'student-create' %}")
-            | Добавить выпускника
-
 block content
 
     h1 Список классов:
 
-    ul
-        - for grade in object_list
-            li
-                a(href="{% url 'student-list' grade_id=grade.pk %}")
-                    | {{ grade.graduation_year }} ({{ grade.letter }})
-            - empty
-                li Пусто.
+    - for g, l in grades
+        article
+            h1
+                a(href="{% url 'student-list' %}?year={{ g }}")
+                    | {{ g }}
+
+                - for i in l
+                    | &nbsp;
+                    a(href="{% url 'student-list' %}?grade_id={{ i.pk }}")
+                        | {{ i.letter }}
